PI-586 (#773)